@@ -1,18 +1,23 @@
-package com.example.application.resources;
+package com.example.application.resource;
 
-import java.io.Serializable;
 import java.net.URI;
+import java.security.Principal;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
+import javax.transaction.Transactional;
 import javax.validation.ConstraintViolation;
 import javax.validation.Valid;
 import javax.validation.Validator;
 import javax.websocket.server.PathParam;
 
+import org.springdoc.api.annotations.ParameterObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.Sort.Direction;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -29,74 +34,77 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import com.example.domains.contracts.services.ActorService;
 import com.example.domains.entities.dtos.ActorDTO;
-import com.example.domains.entities.dtos.ActorShort;
-import com.example.domains.entities.dtos.ElementoDto;
+import com.example.domains.entities.dtos.FilmShortDTO;
 import com.example.exceptions.BadRequestException;
 import com.example.exceptions.DuplicateKeyException;
 import com.example.exceptions.InvalidDataException;
 import com.example.exceptions.NotFoundException;
 
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+
 import org.springframework.http.HttpStatus;
 
 @RestController
-@RequestMapping("/api/v1/actores")
+@RequestMapping(path = "/v1/actores")
+@SecurityRequirement(name = "bearerAuth")
 public class ActorResource {
 	@Autowired
-	private ActorService srv;
-
+	ActorService srv;
+	
 	@GetMapping
-	public List<ActorShort> getAll(@RequestParam(required = false) String filter) {
-		if (filter != null) {}
-		
-		return srv.getByProjection(ActorShort.class);
+	public List<ActorDTO> getAll(@ParameterObject @RequestParam(required = false) String sort) {
+		if(sort== null)
+			return (List<ActorDTO>) srv.getByProjection(ActorDTO.class);
+		else
+			return (List<ActorDTO>) srv.getByProjection(Sort.by(sort), ActorDTO.class);
 	}
-
+	
 	@GetMapping(params = "page")
-	public Page<ActorDTO> getAll(Pageable pageable) {
+	public Page<ActorDTO> getAllPageable(@ParameterObject Pageable pageable) {
 		return srv.getByProjection(pageable, ActorDTO.class);
 	}
 
 	@GetMapping(path = "/{id}")
-	public ActorDTO getOne(@PathVariable int id) throws NotFoundException {
-		var item = srv.getOne(id);
-		if(item.isEmpty())
+	public ActorDTO getOne(@PathVariable int id, Principal principal) throws NotFoundException {
+		var actor = srv.getOne(id);
+		if(actor.isEmpty())
 			throw new NotFoundException();
-		return ActorDTO.from(item.get());
+		else
+			return ActorDTO.from(actor.get());
 	}
 	
-	@GetMapping(path = "/{id}/pelis")
-	public List<ElementoDto<Integer, String>> getPelis(@PathVariable int id) throws NotFoundException {
-		return srv.getOne(id).get().getFilmActors().stream()
-				.map(f-> new ElementoDto<>(f.getFilm().getFilmId(), f.getFilm().getTitle()))
-				.toList();
-	}
-
 	@GetMapping(path = "/{id}/peliculas")
-	public List<Map<String, String>> getPeliculas(@PathVariable int id) throws NotFoundException {
-		return srv.getOne(id).get().getFilmActors().stream()
-				.map(f-> Map.of("id", Integer.toString(f.getFilm().getFilmId()), "titulo", f.getFilm().getTitle()))
-				.toList();
+	@Transactional
+	public List<FilmShortDTO> getPelis(@PathVariable int id) throws NotFoundException {
+		var actor = srv.getOne(id);
+		if(actor.isEmpty())
+			throw new NotFoundException();
+		else {
+			return (List<FilmShortDTO>) actor.get().getFilmActors().stream()
+					.map(item -> FilmShortDTO.from(item.getFilm()))
+					.collect(Collectors.toList());
+		}
 	}
 	
 	@PostMapping
 	public ResponseEntity<Object> create(@Valid @RequestBody ActorDTO item) throws BadRequestException, DuplicateKeyException, InvalidDataException {
+		if(item == null)
+			throw new BadRequestException("Faltan los datos");
 		var newItem = srv.add(ActorDTO.from(item));
 		URI location = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}")
 			.buildAndExpand(newItem.getActorId()).toUri();
 		return ResponseEntity.created(location).build();
-	}
-	@PostMapping("/premios")
-	public String darPremio(@RequestParam String premio) throws BadRequestException, DuplicateKeyException, InvalidDataException {
-		//srv.darPremios(null);
-		return "He dado el premio " + premio;
+
 	}
 
 	@PutMapping("/{id}")
-	@ResponseStatus(HttpStatus.NO_CONTENT)
-	public void update(@PathVariable int id, @Valid @RequestBody ActorDTO item) throws BadRequestException, NotFoundException, InvalidDataException {
+	//@ResponseStatus(HttpStatus.NO_CONTENT)
+	public ActorDTO update(@PathVariable int id, @Valid @RequestBody ActorDTO item) throws BadRequestException, NotFoundException, InvalidDataException {
+		if(item == null)
+			throw new BadRequestException("Faltan los datos");
 		if(id != item.getActorId())
 			throw new BadRequestException("No coinciden los identificadores");
-		srv.modify(ActorDTO.from(item));
+		return ActorDTO.from(srv.modify(ActorDTO.from(item)));	
 	}
 
 	@DeleteMapping("/{id}")
@@ -104,7 +112,5 @@ public class ActorResource {
 	public void delete(@PathVariable int id) {
 		srv.deleteById(id);
 	}
-	
-	
-}
 
+}
